# zephyr-app-gn

./: .gitignore  .gn  BUILD.gn  BUILDCONFIG.gn  README.md  build_zephyr_lib.py  configure_cmake.py  extract_build_flags_for_app_from_ninja.py  replace_app_in_ninja.py  run_ninja.py  setup_toolchain.sh  targets.txt
app/: CMakeLists.txt  prj.conf
gn_app/: prod_app.cc
manifest/: west.yml
toolchain/: BUILD.gn
